--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
   "dependencies": {
     "@aws-sdk/client-cognito-identity": "^3.10.0",
     "@aws-sdk/client-dynamodb": "^3.10.0",
+    "@aws-sdk/client-s3": "^3.13.0",
     "@aws-sdk/credential-provider-cognito-identity": "^3.10.0",
     "@aws-sdk/lib-dynamodb": "^3.10.0",
     "@material-ui/core": "^4.11.3",
     "@material-ui/icons": "^4.11.2",
     "bcryptjs": "^2.4.3",
+    "busboy": "^0.3.1",
     "clsx": "^1.1.1",
     "isomorphic-unfetch": "^3.1.0",
     "next": "^10.0.0",
